[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Wall_E_Tall copy.png" type="Texture" id=1]
[ext_resource path="res://scripts/wall.gd" type="Script" id=2]
[ext_resource path="res://assets/Wall_E copy.png" type="Texture" id=3]
[ext_resource path="res://assets/Wall_N copy.png" type="Texture" id=4]
[ext_resource path="res://assets/Wall_S copy.png" type="Texture" id=5]
[ext_resource path="res://assets/Wall_SE_Tall copy.png" type="Texture" id=6]
[ext_resource path="res://assets/Wall_SW_Tall copy.png" type="Texture" id=7]
[ext_resource path="res://assets/Wall_W copy.png" type="Texture" id=8]
[ext_resource path="res://assets/Wall_W_Tall copy.png" type="Texture" id=9]
[ext_resource path="res://assets/screened.material" type="Material" id=10]
[ext_resource path="res://assets/Wall_NW.png" type="Texture" id=12]
[ext_resource path="res://assets/Wall_NE.png" type="Texture" id=13]
[ext_resource path="res://assets/NorthWallMaterial.tres" type="Material" id=14]
[ext_resource path="res://assets/EastWallMaterial.tres" type="Material" id=15]
[ext_resource path="res://assets/WestWallMaterial.tres" type="Material" id=16]
[ext_resource path="res://assets/stretch_light.shader" type="Shader" id=17]

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 0, 128, 128, 128, 128, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 17 )
shader_param/north = true
shader_param/south = false
shader_param/east = false
shader_param/west = true
shader_param/southwest = false
shader_param/southeast = false
shader_param/northwest = false
shader_param/northeast = false
shader_param/shrink_y_check = true
shader_param/top_len = 31.0

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 17 )
shader_param/north = true
shader_param/south = false
shader_param/east = true
shader_param/west = false
shader_param/southwest = false
shader_param/southeast = false
shader_param/northwest = false
shader_param/northeast = false
shader_param/shrink_y_check = true
shader_param/top_len = 31.0

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 17 )
shader_param/north = false
shader_param/south = false
shader_param/east = false
shader_param/west = false
shader_param/southwest = true
shader_param/southeast = false
shader_param/northwest = false
shader_param/northeast = false
shader_param/shrink_y_check = false
shader_param/top_len = 31.0

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 17 )
shader_param/north = false
shader_param/south = false
shader_param/east = false
shader_param/west = false
shader_param/southwest = false
shader_param/southeast = true
shader_param/northwest = false
shader_param/northeast = false
shader_param/shrink_y_check = false
shader_param/top_len = 31.0

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 17 )
shader_param/north = false
shader_param/south = false
shader_param/east = false
shader_param/west = false
shader_param/southwest = false
shader_param/southeast = false
shader_param/northwest = true
shader_param/northeast = false
shader_param/shrink_y_check = false
shader_param/top_len = 31.0

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 17 )
shader_param/north = false
shader_param/south = false
shader_param/east = false
shader_param/west = false
shader_param/southwest = false
shader_param/southeast = false
shader_param/northwest = false
shader_param/northeast = true
shader_param/shrink_y_check = false
shader_param/top_len = 31.0

[node name="Wall" type="Node2D"]
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 18 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 64, 64 )
shape = SubResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="WallN" type="Sprite" parent="Graphics"]
light_mask = 0
material = ExtResource( 14 )
position = Vector2( 0, -87 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="WallSE" type="Sprite" parent="Graphics"]
visible = false
light_mask = 4
material = SubResource( 14 )
position = Vector2( 64, 20.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="WallSW" type="Sprite" parent="Graphics"]
visible = false
light_mask = 4
material = SubResource( 16 )
position = Vector2( 64, 20.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="WallS" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = ExtResource( 10 )
position = Vector2( 64, 20.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="WallE" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = ExtResource( 15 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="WallETall" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = SubResource( 19 )
position = Vector2( 64, 20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="WallW" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = ExtResource( 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
centered = false

[node name="WallWTall" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = SubResource( 20 )
position = Vector2( 0, -87 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
centered = false

[node name="WallSETall" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = SubResource( 21 )
position = Vector2( 0, -87 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false

[node name="WallSWTall" type="Sprite" parent="Graphics"]
visible = false
light_mask = 0
material = SubResource( 22 )
position = Vector2( 0, -87 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
centered = false
